2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViActions.cs: Fix some buglets in the
	  selection line pivoting.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Fix mouse selection enabling
	  visual mode.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor.Vi/ViActions.cs: Fix the visual mode
	  selection when pivoting around the anchor char and anchor
	  line.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViActions.cs: Fix line end text object.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/Document.cs: Add RemoveMarker overloads
	  allowing to skip line updates.

2010-06-10  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor.Vi/ViMark.cs: Fixed 'Bug 613114 - NRE in
	  editor means error marker never goes away'.

2010-06-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed 'Bug
	  611947 - XML highlighting broken'.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextEditorAccessibility.cs: Disabled
	  accessibility (produces a compile error on linux - on mac it
	  works - the Atk.ObjectFactory implementation differs between
	  my two systems).

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextEditorAccessibility.cs: Worked on
	  accessibility.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: atk impl. improvements

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Added accessibility support.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/JaySyntaxMode.cs: Fixed syntax
	  highlighting bug.
